--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@
 
 body {
     font-family: "Raleway", "Sans serif";
-    margin: 0;
+    margin: 0 5% 0 5%;
+    max-width: 1450px;
+    padding: 0 4px;
+    box-sizing: border-box;
+    font-size: 14px;
+    color: black;
   }
   
   a {
@@ -33,23 +38,16 @@ body {
     border-bottom: 2px;
   }
   .headerNavLink[data-active=true]{
-      color: blue/*a changer*/
+      color:  #0065FC;
   }
 
   /*----------------------Header button----------------------------------------*/
-  
- .mainContainer{
-   margin: auto;
-   max-width: 1450px;
-   padding: 0 4px;
-   box-sizing: border-box;
- }
+
   .headerSearchTitle{
     margin-bottom: 15px;
   }
   .headerSearchParagraph{
     margin-top: 0px;
-    font-size: 14px;
   }
   .searchForm{
     display: inline-flex;
@@ -121,7 +119,7 @@ body {
      align-items: center;
      border-radius: 100%;
      color: blue;
-     background-color: rgb(184, 191, 250);
+     background-color: #F2F2F2;
    }
    .filterTitle{
      margin: 0 10px;
@@ -146,10 +144,246 @@ body {
      color: white;
      margin: 0 15px 0 0;
    }
-   .informationPointParagraph{
-    font-size: 14px;
-   }
    
    /*----------------------reservation----------------------------------------*/
-
    
+   .hostContainer{
+    display: flex;
+    justify-content: space-between;
+    width:100%;
+    height: 550px;
+  }
+  
+  .middleContainer{
+    background-color: #F2F2F2;
+    max-width: 65%;
+    border: solid #F2F2F2 1px;
+    border-radius: 15px;
+    height: 100%;
+  }
+  .hostMainContainer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+  }
+  .postReservation{
+   opacity: 1;
+   cursor: pointer;
+   background-color: white;
+   border-radius:20px;
+   border: 1px solid white;
+   color: white;
+   margin: 2% 3% 2% 3%;
+   padding: 2px;
+   height: 200px;
+   width: 25%;
+   overflow: hidden;
+   display: flex;
+   flex-direction: column;
+  }
+  .reservationInfo{
+ margin: 5px 0 0 7px;
+ width:100%;
+ height: auto;
+  }
+  .reservationInfoParagraph{
+  font-size: 14px;
+  color: black;
+  margin: 0;
+  }
+  .mainContainerTitle{
+   margin: 15px 0 0 20px;
+  }
+  .mainContainerLastTitle{
+   margin: 10px 0 15px 30px;
+   font-size: 12px;
+  }
+  .postReservation:hover{
+    opacity: 0.7;
+  
+  }
+  .postReservation img{
+    width: 100%;
+    height:70%;
+    border-radius: 10px 10px 0 0px;
+  }
+  .reservationStars{
+    margin: 0;
+    font-size: 12px;
+  }
+  .ReservationStarsIcon[data-active=true] {
+    color: #0065FC;
+  }
+  .ReservationStarsIcon[data-active=false] {
+    color: #d9d9d9;
+  }
+  
+  
+    /*------------------------aside------------------------------*/
+  
+  
+  .asideTitleContainer{
+    background-color: #F2F2F2;
+    width: 30%;
+    border: solid #F2F2F2 1px;
+    border-radius: 15px;
+    height: auto;
+  }
+  .asideTitle{
+  margin: 15px 0 0 20px;
+  }
+  .asideContainer{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .popbloc{
+   opacity: 1;
+   cursor: pointer;
+   background-color: white;
+   border-radius:20px;
+   border: 1px solid white;
+   width: 80%;
+   height: 115px;
+   overflow: hidden;
+   margin: 14px;
+   display: flex;
+   padding: 2px;
+  }
+  .popbloc:hover {
+    opacity: 0.7;
+  }
+  .asideImg{
+    width: 35%;
+    height: 100%;
+    border-radius: 20px 0 0 20px;
+  }
+  .asideReservationInfo{
+    padding: 2px;
+    margin: 5px 0 0 0px ;
+
+  }
+  .asideReservationInfoParagraph{
+    margin: 3px 5px 0 0;
+    height: 50%;
+  }
+  .asideReservationStars{
+    font-size: 12px;
+    margin-top: 30px;
+    height: 10%;
+  }
+  .asideReservationStarsIcon[data-active=true] {
+    color: #0065FC;
+  }
+  .asideReservationStarsIcon[data-active=false] {
+    color: #d9d9d9;
+  }
+
+  /* ----------------------------MARSEILLE ACTIVITY----------------------------------- */
+
+.activity{
+  width: 100%;
+  height: auto;
+  background-color: white;
+  margin-top: 70px;
+}
+.activityTitle{
+  color: black;
+}
+.activityMainContainer{
+  height: 400px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  overflow: hidden;
+}
+.activitylargeBolc{
+  display: flex;
+  flex-direction: column;
+  width: 22%;
+  height: 100%;
+  border: solid 1px #F2F2F2;
+  border-radius: 20px 20px 20px 20px;
+}
+.activitylargeImg{
+  width: 100%;
+  height: 90%;
+  border-radius: 20px 20px 0 0;
+}
+.activityParagraph{
+  margin: 10px 2px 4px 10px ;
+  padding: 0;
+}
+.activitySmallBolc{
+  display: flex;
+  flex-direction: column;
+  width: 22%;
+  height: 100%;
+}
+.smallBloc{
+width: 100%;
+height: 55%;
+border: solid 1px #F2F2F2;
+border-radius: 20px 20px 20px 20px;
+}
+.smallLittleBloc{
+display: flex;
+flex-direction: column;
+width: 100%;
+height: 40%;
+border: solid 1px #F2F2F2;
+margin-top: 20px;
+border-radius: 20px 20px 20px 20px;
+}
+.smallLittleLastBloc{
+width: 100%;
+height: 40%;
+border: solid 1px #F2F2F2;
+margin-bottom: 20px;
+border-radius: 20px 20px 20px 20px;
+
+}
+.activitySmallLittleImg{
+  width: 100%;
+  height: 78%;
+  border-radius: 20px 20px 0 0;
+}
+.activitySmallImg{
+  width: 100%;
+  height: 85%;
+  border-radius: 20px 20px 0 0;
+}
+.activitySmallParagraph{
+  margin: 7px 0 0 10px ;
+  padding: 0;
+  height: 100%;
+}
+/* ---------------------footer------------------------------------- */
+
+footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-start;
+  margin-top: 50px;
+  background-color: #F2F2F2;
+  width: 100%;
+  height: 150px;
+
+}
+.footerMenu{
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: auto;
+  text-align: left;
+}
+.footerMenu li{
+  list-style: none;
+}
