--- a/style.css
+++ b/style.css
@@ -14,13 +14,18 @@ body {
     color: inherit;
     text-decoration: none;
   }
-  
+  @media(max-width: 600px){
+    body{
+      margin:0 3% 0 3%;
+      padding: 0;
+    }
+  }
   /*----------------------Header Navigation----------------------------------------*/
   .header {
     display: flex;
-    justify-content:space-between;
     max-width: 1440px;
     margin: auto;
+    justify-content: space-between;
   }
   .headerImg {
     padding: 0 4px;
@@ -28,17 +33,39 @@ body {
   }
   .headerNav {
     display: flex;
-    justify-content: flex-end;
-    
+    align-items: center; 
   }
   .headerNavLink {
-    padding: 2rem;
+    padding: 20px;
     font-weight: 500;
     border-top: 2px;
     border-bottom: 2px;
   }
+  .headerNavLinkSign{
+   color: #0065FC;
+   margin: 0 0 0 30px;
+   font-weight: bold;
+  }
   .headerNavLink[data-active=true]{
       color:  #0065FC;
+  }
+
+  @media(max-width: 600px){
+    .header {
+      display: flex;
+      flex-direction: column;
+    }
+    .headerNav{
+      width: 50%;
+    }
+    .headerNavLink {
+      border-bottom: 2px solid #F2F2F2;
+      font-size: 14px;
+    } 
+    .headerNavLinkSign{
+     padding: 0;
+     font-size: 14px;
+    }
   }
 
   /*----------------------Header button----------------------------------------*/
@@ -88,7 +115,26 @@ body {
     cursor: pointer;
     font-size: 12px;
   }
-
+  @media(max-width: 600px){
+    .search{
+      display: flex;
+      flex-direction: column;
+    }
+    .searchForm{
+      justify-content: center;
+    }
+    .searchFormInput{
+      font-weight: bold;
+      font-size: 14px;
+      width: 60%;
+    }
+    .searchFormInput::placeholder{
+      font-size: 14px;
+    }
+    .searchFormButton{
+      font-size: 14px;
+  }
+}
    /*----------------------filter----------------------------------------*/
 
    .filter{
@@ -136,15 +182,42 @@ body {
      display: flex;
      align-items: center;
      justify-content: center;
+     border: #d9d9d9 solid 2px;
      border-radius: 100%;
      height: 15px;
      width: 15px;
-     border: solid 1px #d9d9d9d9;
-     background-color: #0065FC;
-     color: white;
+     color:#d9d9d9;
+     background-color: blue;
      margin: 0 15px 0 0;
    }
-   
+   @media(max-width: 600px){
+    .filter{
+      flex-direction: column;
+    }
+    .filterMainTitle{
+     font-size: 14px;
+    }
+    .containerFilter{
+      height: 45px;
+      width: 70%;
+    }
+    .filterIcon{
+      height: 49px;
+      width: 50px;
+    }
+    .filterTitle{
+      font-size: 14px;
+    }
+    .informationPointIcon{
+      height: 20px;
+      width: 20px;
+      color: #0065FC;
+      border-radius: none;
+      border: none;
+     background-color:white;
+   }
+  }
+
    /*----------------------reservation----------------------------------------*/
    
    .hostContainer{
@@ -221,11 +294,51 @@ body {
     color: #d9d9d9;
   }
   
+  @media(max-width: 600px){
+    .hostContainer{
+      flex-direction: column-reverse;
+      height: auto;
+    }
+    .middleContainer{
+      background-color: white;
+      max-width: 100%;
+      border: none;
+      border-radius: none;
+    }
+    .hostMainContainer{
+      width: 100%;
+      height: auto;
+    }
+    .postReservation{
+     border: 1px solid #F2F2F2;
+     color: white;
+     width: 80%;  
+    }
+    .reservationInfo{
+   margin: 5px 0 0 7px;
+   width:100%;
+    }
+    .reservationInfoParagraph{
+    font-size: 16px;
+    }
+    .mainContainerTitle{
+     margin: 15px 0 0 20px;
+    }
+    .mainContainerLastTitle{
+     font-size: 10px;
+    }
+    .postReservation img{
+      border-radius: 15px 15px 0 0px;
+    }
+    .reservationStars{
+      font-size: 12px;
+    }
+  }
   
     /*------------------------aside------------------------------*/
   
   
-  .asideTitleContainer{
+  .asideMainContainer{
     background-color: #F2F2F2;
     width: 30%;
     border: solid #F2F2F2 1px;
@@ -283,94 +396,105 @@ body {
   .asideReservationStarsIcon[data-active=false] {
     color: #d9d9d9;
   }
-
+  
+  @media(max-width: 600px){
+    .asideMainContainer{
+      background-color: #d9d9d9;
+      width: 90%;
+      border-radius: 0 0 0 0;
+    }
+    .asideImg{
+      width: 45%;
+      height: 100%;
+      border-radius: 15px 0 0 15px;
+    }
+    .asideReservationInfoParagraph{
+       font-size: 14px;
+    }
+  }
   /* ----------------------------MARSEILLE ACTIVITY----------------------------------- */
+  .activity {
+    display: grid;
+    column-gap: 25px;
+    margin: 45px 0;
+  }
+  .activityTitle {
+    grid-column: 1/-1;
+  }
+  .activityItems {
+    box-shadow: 0 0 20px #0000002e;
+    border-radius: 15px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+  }
+  .activityItems:hover {
+    opacity: 0.7;
+  }
+  .activityItemsWrapmode {
+    position: relative;
+    flex: 1;
+  }
+  .activityItemsImg {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+  }
+  .activityItemsTitle {
+    margin: 16px 20px;
+  }
 
-.activity{
-  width: 100%;
-  height: auto;
-  background-color: white;
-  margin-top: 70px;
-}
-.activityTitle{
-  color: black;
-}
-.activityMainContainer{
-  height: 400px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  overflow: hidden;
-}
-.activitylargeBolc{
-  display: flex;
-  flex-direction: column;
-  width: 22%;
-  height: 100%;
-  border: solid 1px #F2F2F2;
-  border-radius: 20px 20px 20px 20px;
-}
-.activitylargeImg{
-  width: 100%;
-  height: 90%;
-  border-radius: 20px 20px 0 0;
-}
-.activityParagraph{
-  margin: 10px 2px 4px 10px ;
-  padding: 0;
-}
-.activitySmallBolc{
-  display: flex;
-  flex-direction: column;
-  width: 22%;
-  height: 100%;
-}
-.smallBloc{
-width: 100%;
-height: 55%;
-border: solid 1px #F2F2F2;
-border-radius: 20px 20px 20px 20px;
-}
-.smallLittleBloc{
-display: flex;
-flex-direction: column;
-width: 100%;
-height: 40%;
-border: solid 1px #F2F2F2;
-margin-top: 20px;
-border-radius: 20px 20px 20px 20px;
-}
-.smallLittleLastBloc{
-width: 100%;
-height: 40%;
-border: solid 1px #F2F2F2;
-margin-bottom: 20px;
-border-radius: 20px 20px 20px 20px;
+  @media (min-width: 1200px) {
+    .activity {
+      grid-template-rows: auto 220px 30px 30px 30px 220px;
+      grid-template-columns: repeat(1fr 1fr 1fr 1fr 1fr);
+    }
+    .activityItems1 {
+      grid-column: 1/2;
+      grid-row: 2/7;
+    }
+    .activityItems2 {
+      grid-column: 2/3;
+      grid-row: 2/5;
+    }
+    .activityItems3 {
+      grid-column: 3/4;
+      grid-row: 2/7;
+    }
+    .activityItems4 {
+      grid-column: 4/5;
+      grid-row: 2/3;
+    }
+    .activityItems5 {
+      grid-column: 2/3;
+      grid-row: 6/7;
+    }
+    .activityItems6 {
+      grid-column: 4/5;
+      grid-row: 4/7;
+    }
+  }
+  @media (max-width: 1200px) {
+    .activity {
+      row-gap: 30px;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: auto 180px 180px 180px;
+    }
+  }
+  @media (max-width: 600px) {
+    .activity {
+      row-gap: 30px;
+      grid-template-columns: 1fr;
+      grid-template-rows: auto 180px 180px 180px 180px 180px 180px;
+    }
+  }
 
-}
-.activitySmallLittleImg{
-  width: 100%;
-  height: 78%;
-  border-radius: 20px 20px 0 0;
-}
-.activitySmallImg{
-  width: 100%;
-  height: 85%;
-  border-radius: 20px 20px 0 0;
-}
-.activitySmallParagraph{
-  margin: 7px 0 0 10px ;
-  padding: 0;
-  height: 100%;
-}
 /* ---------------------footer------------------------------------- */
 
 footer{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: flex-start;
   margin-top: 50px;
   background-color: #F2F2F2;
   width: 100%;
@@ -385,5 +509,56 @@ footer{
   text-align: left;
 }
 .footerMenu li{
-  list-style: none;
+  list-style: none;  
+  font-size: 16px;
+} 
+.footerMenu li{
+    margin-top: 5px;
+  }
+  .footerMenu li:hover{
+    opacity: 0.7;
+  }
+@media(max-width: 600px){
+  footer{
+    flex-direction: column; 
+    margin-top: 40px;
+    height: 340px;
+  }
+  .footerMenu{
+   margin-left: 30px;
+  }
+  .footerMenu li{
+      margin-top: 5px;
+    }
+}
+@media(max-width: 882px){
+  .hostContainer{
+    height: auto;
+  }
+  .postReservation img{
+    height:60%;
+  }
+  .asideReservationInfoParagraph{
+    font-size: 10px;
+  }
+ .reservationInfoParagraph{
+  font-size: 10px;
+  }
+  .activityMainContainer{
+    height: 310px;
+  }
+  .activityParagraph, .activitySmallParagraph{
+    font-size: 10px;
+}
+  .postReservation{
+  height: 150px;
+}
+  .popbloc{
+  height: 80px;
+}
+  .asideReservationInfo{
+  margin: 0;
+}
+  .asideReservationStars{
+  margin-top: 20px;
 }
