--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     max-width: 1450px;
     padding: 0 4px;
     box-sizing: border-box;
-    font-size: 16px;
+    font-size: 14px;
     color: black;
   }
   
@@ -392,7 +392,7 @@ body {
   .asideReservationStars{
     font-size: 12px;
     margin-top: 30px;
-    height: 10%;
+    height: 5%;
   }
   .asideReservationStarsIcon[data-active=true] {
     color: #0065FC;
@@ -400,7 +400,7 @@ body {
   .asideReservationStarsIcon[data-active=false] {
     color: #d9d9d9;
   }
-  
+ 
   @media(max-width: 600px){
     .asideMainContainer{
       background-color: #d9d9d9;
@@ -557,7 +557,7 @@ footer{
   .postReservation{
   height: 150px;
 }
-  .popbloc{
+  .popblock{
   height: 80px;
 }
   .asideReservationInfo{
